--- a/appveyor.yml
+++ b/appveyor.yml
@@ -133,8 +133,8 @@ after_test:
   - >
     IF "%APPVEYOR_REPO_TAG%" == "true"
     (
-    python3 -m pip install twine &&
-    python3 -m twine upload --verbose --skip-existing dist/*.whl
+    python -m pip install twine &&
+    python -m twine upload --verbose --skip-existing dist/*.whl
     )
 
 artifacts:
