--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,7 +69,7 @@ install:
       # from https://github.com/appveyor/build-images/blob/27bde614bc60d7ef7a8bc46182f4d7582fa11b56/scripts/Windows/install_python.ps1#L88-L108
       function InstallPythonEXE($version, $platform, $targetPath) {
         $urlPlatform = ""
-        if ($platform -eq 'x64') {
+        if ($platform -eq '64') {
             $urlPlatform = "-amd64"
         }
 
